--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-funbox",
+  "homepage": "http://vladimirivancha.github.io/react-funbox", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
